[package]
name = "autolock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.11.13", features = ["json","cookies"] }
# ,"cookies"
native-tls="0.2.11"
serde = {version = "1.0.150", features = ["derive"]}
tokio = {version = "1.10.0", features = ["full"]}
openssl="0.10.44"
serde_json="1.0.89"
regex="1.7.0"